[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["command-line-utilities"]
description = "Ottieni le indicazioni su come compilare il 730 partendo dalle transazioni Bitpanda"
edition = "2021"
homepage = "https://github.com/veeso/bitpanda730"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bitpanda", "dichiarazione-redditi", "730", "investimenti"]
license = "MIT"
name = "bitpanda730"
readme = "README.md"
repository = "https://github.com/veeso/bitpanda730"
version = "0.1.0"

[[bin]]
name = "bitpanda730"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
argh = "^0.1"
bitpanda-api = "^0.1"
bitpanda-csv = "^0.1"
chrono = { version = "^0.4", features = [ "serde" ] }
env_logger = "^0.10"
log = "^0.4"
rust_decimal = "^1.26"
rust_decimal_macros = "^1.26"
spinners = "^4.1"
thiserror = "^1.0"
tokio = { version = "1.28", features = [ "macros", "net", "rt", "rt-multi-thread" ] }

[dev-dependencies]
bitpanda-csv = { version = "^0.1", features = [ "mock" ] }
pretty_assertions = "^1.2"
